# CG_labs

./: CMakeLists.txt
src/: dz3.cpp  lab1.cpp  lab2.cpp  lab5.cpp  png_files.h
